--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "nodemon": "^2.0.6"
     },
     "devDependencies": {
+        "axios": "^0.21.1",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
         "mocha": "^8.2.1"
