--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.0",
+        "axios": "^0.21.1",
+        "mongoose": "^5.11.11",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-scripts": "^4.0.0",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -18,7 +20,7 @@
     "eslintConfig": {
         "extends": "react-app"
     },
-    "proxy": "https://localhost:3001",
+    "proxy": "http://localhost:3001",
     "browserslist": {
         "production": [
             ">0.2%",
