--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,14 @@
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.0",
+        "axios": "^0.21.1",
+        "install": "^0.13.0",
+        "npm": "^6.14.11",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-scripts": "^4.0.0",
-        "react-router-dom": "^5.2.0"
+        "react-google-login": "^5.2.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
