--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,9 @@
         ]
     },
     "devDependencies": {
-        "@material-ui/icons": "^4.11.2"
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/pickers": "^3.2.10",
+        "date-fns": "^2.16.1",
+        "@date-io/date-fns": "1.3.11"
     }
 }
