--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "axios": "^0.21.1",
+        "google-auth-library": "^6.1.4",
         "install": "^0.13.0",
         "npm": "^6.14.11",
         "react": "^17.0.1",
