--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,13 @@
         "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000"
     },
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "google-auth-library": "^6.1.4",
+        "googleapis": "^67.0.0",
         "http-errors": "~1.8.0",
         "mongoose": "^5.11.11",
         "morgan": "^1.10.0",
