--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
         "react-dom": "^17.0.1",
         "react-google-login": "^5.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^4.0.0"
+        "react-scripts": "^4.0.0",
+        "universal-cookie": "^4.0.4"
     },
     "scripts": {
         "start": "react-scripts start",
