--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "aws-sdk": "^2.827.0",
+        "buffer": "^6.0.3",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
