--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "http-errors": "~1.8.0",
         "mongoose": "^5.11.11",
         "morgan": "^1.10.0",
+        "njwt": "^1.0.0",
         "nodemon": "^2.0.6"
     },
     "devDependencies": {
