--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
         "@material-ui/icons": "^4.11.2",
         "@material-ui/pickers": "^3.2.10",
         "date-fns": "^2.16.1",
+        "axios": "^0.21.1",
+        "mongoose": "^5.11.11",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
@@ -22,7 +24,7 @@
     "eslintConfig": {
         "extends": "react-app"
     },
-    "proxy": "https://localhost:3001",
+    "proxy": "http://localhost:3001",
     "browserslist": {
         "production": [
             ">0.2%",
