--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,7 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "eslint-plugin-only-warn": "^1.0.2"
+    }
 }
