--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
         "mongoose": "^5.11.11",
         "morgan": "^1.10.0",
         "njwt": "^1.0.0",
-        "nodemon": "^2.0.6"
+        "nodemon": "^2.0.6",
+        "stripe": "^8.131.1"
     },
     "devDependencies": {
         "axios": "^0.21.1",
