--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "google-auth-library": "^6.1.4",
         "googleapis": "^67.0.0",
         "http-errors": "~1.8.0",
+        "jwt-decode": "^3.1.2",
         "mongoose": "^5.11.11",
         "morgan": "^1.10.0",
         "njwt": "^1.0.0",
