--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
         "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000"
     },
     "dependencies": {
+        "aws-sdk": "^2.829.0",
         "bcrypt": "^5.0.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
@@ -18,6 +19,8 @@
         "http-errors": "~1.8.0",
         "mongoose": "^5.11.11",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
+        "multer-s3": "^2.9.0",
         "njwt": "^1.0.0",
         "nodemon": "^2.0.6"
     },
