--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
         "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000"
     },
     "dependencies": {
+        "@sendgrid/mail": "^7.4.2",
         "bcrypt": "^5.0.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
