--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "googleapis": "^67.0.0",
         "http-errors": "~1.8.0",
         "jwt-decode": "^3.1.2",
+        "moment": "^2.29.1",
         "mongoose": "^5.11.11",
         "morgan": "^1.10.0",
         "njwt": "^1.0.0",
