--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "aws-sdk": "^2.830.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -20,6 +21,8 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "njwt": "^1.0.0",
     "nodemon": "^2.0.6"
   },
