--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@fcannizzaro/react-use-cookie-watcher": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
-    "date-fns": "^2.16.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "mongoose": "^5.11.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
