--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
+    "@stripe/react-stripe-js": "^1.2.0",
+    "@stripe/stripe-js": "^1.11.0",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "mongoose": "^5.11.11",
