--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
     "njwt": "^1.0.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "stripe": "^8.132.0"
   },
   "devDependencies": {
     "axios": "^0.21.1",
