--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "@material-ui/pickers": "^3.2.10",
     "@stripe/react-stripe-js": "^1.2.0",
     "@stripe/stripe-js": "^1.11.0",
+    "aws-sdk": "^2.830.0",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "mongoose": "^5.11.11",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
