--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fcannizzaro/react-use-cookie-watcher": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "@stripe/react-stripe-js": "^1.2.0",
     "@stripe/stripe-js": "^1.11.0",
