add react-copy-to-clipboard dependency

--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0"
