--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@fcannizzaro/react-use-cookie-watcher": "^1.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.18",
     "@material-ui/icons": "^4.11.2",
