--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.830.0",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "moment": "^2.29.1",
     "mongoose": "^5.11.11",
     "multer": "^1.4.2",
