--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon ./bin/www",
     "debug": "nodemon  --inspect ./bin/www",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000"
+    "test": "./node_modules/.bin/mocha --exit --timeout 30000"
   },
   "dependencies": {
     "@material-ui/lab": "^4.0.0-alpha.57",
