--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cypress run",
+    "testInteractive": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
