--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "eslint-plugin-only-warn": "^1.0.2",
+    "file-loader": "^6.2.0",
     "webpack": "^5.20.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
