--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "react": "^17.0.1",
+    "react-code-blocks": "0.0.8",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
