--- a/client/widget-build/package.json
+++ b/client/widget-build/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start":"webpack serve --config widget.config.js",
+    "build":"webpack --config widget.config.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
