add missing dependencies

--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7"
   }
 }
