--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client", "server"
   ],
   "scripts":{
-    "build":"yarn workspace client run webpack",
+    "build":"yarn workspace client run build",
     "start":"yarn workspace server run start"
   }
 }
